fix table layout issue of hardware introduction documentation.

--- a/themes/dji-doc/source/stylesheets/bootstrap/_tables.scss
+++ b/themes/dji-doc/source/stylesheets/bootstrap/_tables.scss
@@ -139,7 +139,7 @@ th {
     }
   }
   > tbody {
-    > tr:nth-child(27), tr:nth-child(27) {
+    > tr:nth-child(27), tr:nth-child(31) {
       border-bottom: 1px solid $table-border-color;
     }
   }
